<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.moraga.ev4vmoragaptenorio.ResultadosActivity">
    <GridLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="4"
        android:id="@+id/gridLayout">
    <TextView
        android:id="@+id/titulo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/titulo1"/>
    <TextView
        android:id="@+id/nombreLocal"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0" />
    <TextView
        android:id="@+id/titulo2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/titulo2"/>
    <TextView
        android:id="@+id/telefonoLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"/>
    <TextView
        android:id="@+id/titulo3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/titulo3"/>
    <TextView
        android:id="@+id/emailLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"/>
    <TextView
        android:id="@+id/titulo4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/titulo4"/>
    <TextView
        android:id="@+id/direccionLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"/>
    </GridLayout>
    <TextView
        android:id="@+id/titulofoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulofoto"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/gridLayout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp" />
    <ImageView
        android:id="@+id/foto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_column="3"
        android:layout_row="3"
        android:layout_below="@+id/titulofoto"
        android:layout_alignEnd="@+id/gridLayout" />
    <Button
        android:id="@+id/irAlMapa"
        android:layout_width="600dp"
        android:layout_height="50dp"
        android:onClick="irAlMapa"
        android:text="@string/irAlMapa"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/foto"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/volver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnvolver"
        android:onClick="btnvolver"
        android:layout_below="@+id/irAlMapa"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />
</RelativeLayout>
